V4 WIP2 fix #157, fix #77, close #79, close #115, close #117, close #130, close #138, close #149