@@ -20,15 +20,17 @@ import org.joml.AxisAngle4f;
 import org.joml.Math;
 import org.joml.Quaternionf;
 import org.joml.Vector3f;
+import pigcart.particlerain.ParticleRain;
+import pigcart.particlerain.StonecutterUtil;
 import pigcart.particlerain.config.ModConfig;
 
 import java.awt.*;
 
 //? if >=1.21.5 {
-/*import net.minecraft.client.renderer.block.model.BlockStateModel;
-*///?} else {
-import net.minecraft.client.resources.model.BakedModel;
-//?}
+import net.minecraft.client.renderer.block.model.BlockStateModel;
+//?} else {
+/*import net.minecraft.client.resources.model.BakedModel;
+*///?}
 import static pigcart.particlerain.config.ModConfig.CONFIG;
 
 public class ShrubParticle extends WeatherParticle {
@@ -36,28 +38,22 @@ public class ShrubParticle extends WeatherParticle {
     protected ShrubParticle(ClientLevel level, double x, double y, double z) {
         super(level, x, y, z, CONFIG.shrub.gravity, CONFIG.shrub.opacity, CONFIG.shrub.size, CONFIG.shrub.windStrength, CONFIG.shrub.stormWindStrength);
 
-        if (ModConfig.CONFIG.dust.spawnOnGround) this.yd = 0.1F; //otherwise they get stuck and despawn for some reason >:?
+        this.hasPhysics = true;
+
+        this.yd = 0.2F;
 
         BlockState blockState = level.getBlockState(level.getHeightmapPos(Heightmap.Types.MOTION_BLOCKING, this.pos));
         // no foliage convention tag? :(
-        //? if >=1.21.5 {
-        /*if (blockState.is(BlockTags.REPLACEABLE) && !blockState.isAir() && blockState.getFluidState().isEmpty() && !blockState.is(BlockTags.CROPS) && !blockState.is(BlockTags.SNOW)) {
+        if (blockState.is(BlockTags.REPLACEABLE) && !blockState.isAir() && blockState.getFluidState().isEmpty() && !blockState.is(BlockTags.CROPS) && !blockState.is(BlockTags.SNOW)) {
+            //? if >=1.21.5 {
             final BlockStateModel model = Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState);
             this.setSprite(model.particleIcon());
             final BakedQuad quad = model.collectParts(this.random).getFirst().getQuads(null).getFirst();
-            if (quad.isTinted()) {
-                Color color = new Color(BiomeColors.getAverageFoliageColor(level, this.pos));
-                this.setColor(color.getRed() / 255F, color.getGreen() / 255F, color.getBlue() / 255F);
-            }
-        } else {
-            blockState = Blocks.DEAD_BUSH.defaultBlockState();
-        }
-        this.setSprite(Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState).particleIcon());
-        *///?} else {
-        if (blockState.is(BlockTags.REPLACEABLE) && !blockState.isAir() && blockState.getFluidState().isEmpty() && !blockState.is(BlockTags.CROPS) && !blockState.is(BlockTags.SNOW)) {
-            final BakedModel model = Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState);
+            //?} else {
+            /*final BakedModel model = Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState);
             this.setSprite(model.getParticleIcon());
-            final BakedQuad quad = model.getQuads(blockState, null, this.random).getFirst();
+            final BakedQuad quad = model.getQuads(blockState, null, this.random).get(0);
+            *///?}
             if (quad.isTinted()) {
                 Color color = new Color(BiomeColors.getAverageFoliageColor(level, this.pos));
                 this.setColor(color.getRed() / 255F, color.getGreen() / 255F, color.getBlue() / 255F);
@@ -65,13 +61,22 @@ public class ShrubParticle extends WeatherParticle {
         } else {
             blockState = Blocks.DEAD_BUSH.defaultBlockState();
         }
-        this.setSprite(Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState).getParticleIcon());
-        //?}
+        //? if >=1.21.5 {
+        this.setSprite(Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState).particleIcon());
+        //?} else {
+        /*this.setSprite(Minecraft.getInstance().getBlockRenderer().getBlockModel(blockState).getParticleIcon());
+        *///?}
+    }
+
+    @Override
+    public void testForCollisions() {
+        //dont
     }
 
     @Override
     public void tick() {
         super.tick();
+        if (this.xd == 0 || this.zd == 0) this.remove();
         this.xd = level.isThundering() ? ModConfig.CONFIG.shrub.stormWindStrength : ModConfig.CONFIG.shrub.windStrength;
         this.zd = level.isThundering() ? ModConfig.CONFIG.shrub.stormWindStrength : ModConfig.CONFIG.shrub.windStrength;
         this.oRoll = this.roll;
